Added string and regex initial file

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>JS Samples</title>
     </head>
     <body>
-        <script type="text/javascript" src="spread.research.js"></script>
+        <div id="output"></div>
+        <script type="text/javascript" src="str.regex.research.js"></script>
     </body>
 </html>
