Added small binary tree sample

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         <div id="output"></div>
-        <script type="text/javascript" src="str.regex.research.js"></script>
+        <script type="text/javascript" src="binarytree.research.js"></script>
     </body>
 </html>
